# filemeta-harvester

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yaml.bak2  docker-compose.yml  pipelines.Dockerfile  prefect.Dockerfile  pyproject.toml
config/: config-docker.toml  config.toml  harvester.toml
dags/db/: filestore.py  pidstore.py
dags/oai/: harvester.py  harvester_dags.py  harvester_tasks.py
deployments/: create_deployments.py
src/filemeta_harvester/: config.py
src/filemeta_harvester/flows/: harvester_flows.py
src/filemeta_harvester/tasks/: harvester_tasks.py
